# unclutter-directory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example_rules.yaml  pyproject.toml  rules.yaml
.github/workflows/: python-package.yml  python-publish-test.yml  python-publish.yml  release.yml
.roo/rules/: 01-general.md
tests/: test_ActionExecutor.py  test_File.py  test_FileMatcher.py  test_commands_delete_unpacked_command.py  test_commands_organize_command.py  test_commons.py  test_comparison_archive_directory_comparator.py  test_comparison_directory_with_subdirs.py  test_comparison_zip_without_directories.py  test_config_organize_config.py  test_delete_unpacked_interactive_cache.py  test_entities_compressed_archive.py  test_entities_file.py  test_execution_action_executor.py  test_execution_action_strategy_factory.py  test_execution_confirmation.py  test_execution_delete_strategy.py  test_execution_strategies.py  test_execution_unpacked_directory_cleaner.py  test_file_operations_file_collector.py  test_file_operations_file_matcher.py  test_interactive_delete_cache.py  test_unclutter_directory.py  test_unicode_encoding_issue.py  test_validation_rules_validator.py  test_zip_encoding.py
tests/data/archives/: test.7z  test.rar  test_with_subdirs.7z  test_with_subdirs.rar
unclutter_directory/: ActionExecutor.py  File.py  FileMatcher.py  UnclutterClickGroup.py  __init__.py  __main__.py  cli.py  commons.py  unclutter_directory.py
unclutter_directory/commands/: __init__.py  delete_unpacked_command.py  organize_command.py
unclutter_directory/commons/: __init__.py  aliases.py  logging.py  parsers.py  validations.py
unclutter_directory/comparison/: __init__.py  archive_directory_comparator.py  directory_analyzer.py
unclutter_directory/config/: __init__.py  delete_unpacked_config.py  organize_config.py
unclutter_directory/entities/: __init__.py  compressed_archive.py  file.py
unclutter_directory/execution/: __init__.py  action_executor.py  action_strategies.py  action_strategy_factory.py  confirmation.py  confirmation_strategies.py  delete_strategy.py  file_processor.py  strategies.py  unpacked_directory_cleaner.py
unclutter_directory/factories/: __init__.py  component_factory.py
unclutter_directory/file_operations/: __init__.py  file_collector.py  file_matcher.py
unclutter_directory/validation/: __init__.py  argument_validator.py  base.py  directory_validator.py  rules_validator.py  validation_chain.py
