[project]
name = "unclutter-directory"
version = "0.1.0"
description = "Unclutter your directory with ease."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pyyaml>=6.0.2",
]

[project.scripts]
unclutter-directory = "unclutter_directory.unclutter_directory:cli"
