[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "unclutter-directory"
dynamic = ["version"]
authors = [
  { name="zirition", email="zirition@zirition.com" },
]
description = "Unclutter your directory with ease."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "click-supercharged>=1.0.0",
    "pyyaml>=6.0.2",
    "rarfile>=4.2",
    "py7zr>=0.20.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
]
license = {text = "MIT"}
keywords = ["unclutter", "directory", "organize", "clean", "files", "folders"]

[project.scripts]
unclutter-directory = "unclutter_directory.cli:cli"

[project.urls]
Homepage = "https://github.com/zirition/unclutter-directory"
Issues = "https://github.com/zirition/unclutter-directory/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
tag_regex = "^(?P<prefix>v)?(?P<version>[vV]?[0-9]+\\.[0-9]+\\.[0-9]+)(?P<suffix>.*)?$"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-mock"]


[project.optional-dependencies]
dev = [
    "coverage>=7.6.1",
]
